# tacos

./: .gitignore  .hgignore  SConstruct  bochsrc
bld/: SConscript  tacos
bld/drivers/: mmu.c
bld/kernel/: SConscript  process.c  screen.c
bld/ld/: link.ld
bld/libs/: SConscript
bochs/: bochs.cfg.in
doc/: Memory Management 1.xps  boot.flp  minix_source_3_1_1.tar.bz2
grub/: boot.flp  stage2
include/: dt.h  interrupts.h  kprintf.h  multiboot.h  pagedir.h  portio.h  screen.h
include/asm/: interrupt.h  multiboot.h  process.h  segments.h
include/asm-i386/: gdt.h  interrupt.h  interrupts.h  process.h
include/drivers/: hello.h  mmu.h  sleeper.h  world.h
include/ide/: ide.h
include/lib/: datetime.h  string.h
include/tacos/: cpuid.h  driver.h  gdt.h  interrupt.h  interrupts.h  kernel.h  memory.h  panic.h  process.h  segments.h  task.h  types.h
iso/: SConscript
kernel/include/: dt.h  elf.h  file.h  fpu.h  idle.h  init.h  interrupts.h  iso9660.h  kmalloc.h  kmalloc_features.h  kprintf.h  ldsyms.h  log.h  mmu.h  multiboot.h  panic.h  pic.h  portio.h  process.h  ring3.h  sbrk.h  scheduler.h  screen.h  snprintf.h  ssp.h  string.h  syscall.h  tss.h  tty.h
kernel/src/: SConscript  dt.c  elf.c  fpu.c  idle.c  init.c  interrupts.c  iso9660.c  kmain.c  kmalloc.c  kprintf.c  log.c  mmu.c  panic.c  pic.c  process.c  sbrk.c  scheduler.c  screen.c  snprintf.c  ssp.c  string.c  tss.c  tty.c
scons/common/: defs.sc  environ.sc  (+1 more)
src/: SConscript  interrupts.c  kmain.c  kprintf.c  screen.c  snprintf.c  ssp.c  tss.c
toolchain/: .gitignore  Makefile  binutils-2.24.patch  build.sh  dash-0.5.7.patch  gcc-4.9.1.patch  newlib-2.1.0.patch
toolchain/source/newlib-2.1.0/newlib/libc/sys/tacos/: Makefile.am  Makefile.in  _exit.c  aclocal.m4  bits  chdir.c  close.c  closedir.c  configure  crt0.S  dup2.c  execve.c  fcntl.c  fork.c  fstat.c  getcwd.c  getegid.c  geteuid.c  getgid.c  getgroups.c  getpgid.c  getpgrp.c  getpid.c  getppid.c  getuid.c  isatty.c  kill.c  lseek.c  lstat.c  open.c  opendir.c  pipe.c  read.c  readdir.c  sbrk.c  setpgid.c  sigaction.c  sigemptyset.c  sigfillset.c  sigprocmask.c  (+8 more)
toolchain/source/newlib-2.1.0/newlib/libc/sys/tacos/sys/: dirent.h  errno.h  fcntl.h  ioctl.h  signal.h  signum.h  stat.h  termios.h  times.h  types.h  wait.h
toolchain/source/newlib-2.1.0/newlib/libc/sys/tacos/tacos/: syscall.h
(+197 files in other folders)
